# boost-cmake-build-example

./: .gitignore  CMakeLists.txt  README.md
BAN/: CMakeLists.txt  main.cpp
BAN/ban_timer.dir/Debug/: ban_timer.exe.recipe
BAN/include/: custom_timer.hpp  http_sync_client.hpp
ban_network/: LICENSE  README.md
ban_network/client/: CMakeLists.txt  client_option.h  client_session.cpp  client_session.h  lobby_client.cpp  lobby_client.h  main.cpp
ban_network/common/: CMakeLists.txt  lobby_session.cpp  lobby_session.h  logger.hpp  message.hpp  time_util.hpp  tsdeque.hpp
ban_network/server/: CMakeLists.txt  lobby_server.cpp  lobby_server.h  main.cpp  server_option.h
cmake/: boost_custom_macros.cmake  boost_custom_variables.cmake
simple_client/: CMakeLists.txt  main.cpp
simple_client/simple_client.dir/Debug/: simple_client.exe.recipe  simple_client.ilk
simple_server/: CMakeLists.txt  main.cpp  udp_server.hpp
simple_server/simple_server.dir/Debug/: simple_server.exe.recipe  simple_server.ilk
